# Cmake-template-examples

exe/: CMakeLists.txt  main.cpp
exe_ext-lib/: README.md
exe_ext-lib/execA/: CMakeLists.txt  vcpkg.json
exe_ext-lib/execA/src/: main.cpp
exe_ext-lib/libA/: CMakeLists.txt  vcpkg.json
exe_ext-lib/libA/cmake/: Installing.cmake
exe_ext-lib/libA/include/: do_something.h
exe_ext-lib/libA/src/: do_something.cpp
lib/: CMakeLists.txt  README.md  vcpkg.json
lib/install/cmake/: test_libTargets.cmake
lib/src/: do_something.cpp
